--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/bin
+/Users/Jiho/Desktop/cs307/CS307-Team-19-Sentinel-Data-Vault/bin
