added *.class to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/bin
+/Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/bin/*.class
 /Users/Jiho/Desktop/cs307/CS307-Team-19-Sentinel-Data-Vault/bin
 Users\Thomas\Documents\GitHub\CS307-Team-19-Sentinel-Data-Vault\bin
