--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-/Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/bin/*.class
+/Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/bin
+
+bin/
+
 /Users/Jiho/Desktop/cs307/CS307-Team-19-Sentinel-Data-Vault/bin
+
 Users\Thomas\Documents\GitHub\CS307-Team-19-Sentinel-Data-Vault\bin
