--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ bin/
 /Users/Jiho/Desktop/cs307/CS307-Team-19-Sentinel-Data-Vault/bin
 
 Users\Thomas\Documents\GitHub\CS307-Team-19-Sentinel-Data-Vault\bin
+
+.DS_Store
