added .DS_Store to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ bin/
 Users\Thomas\Documents\GitHub\CS307-Team-19-Sentinel-Data-Vault\bin
 
 .DS_Store
+
+/Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/.DS_Store
