valid email checker

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="JARs/miglayout15-swing.jar"/>
 	<classpathentry kind="lib" path="JARs/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="E:/javax.mail.jar" sourcepath="E:/javamail-1.5.4-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
