--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="JARs/miglayout15-swing.jar"/>
 	<classpathentry kind="lib" path="JARs/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="lib" path="JARs/javax.mail.jar"/>
+	<classpathentry kind="lib" path="JARs/passay-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
