--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="JARs/miglayout15-swing.jar"/>
 	<classpathentry kind="lib" path="JARs/sqlite-jdbc-3.8.11.2.jar"/>
-	<classpathentry kind="lib" path="JARs/javax.mail.jar"/>
-	<classpathentry kind="lib" path="JARs/passay-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Jiang/Desktop/CS307-Team-19-Sentinel-Data-Vault/JARs/javax.mail.jar"/>
+	<classpathentry kind="lib" path="/Users/Jiang/Desktop/CS307-Team-19-Sentinel-Data-Vault/JARs/passay-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
