--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="JARs/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="lib" path="JARs/passay-1.1.0.jar"/>
 	<classpathentry kind="lib" path="JARs/javax.mail.jar"/>
+	<classpathentry kind="lib" path="JARs/activation.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
