--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ bin/
 .DS_Store
 
 /Users/AdamPetty/Desktop/Stuff/School/CS/CS307/CS307-Team-19-Sentinel-Data-Vault/.DS_Store
+
+src/userInterface/SettingsView.java
